Добавлено: 1) Открытие  папки по умолчанию в диалоговом окне. 2) При завершении хеширования файла отображается диалоговое окно с вопросом об открытии файла с результатом хеша. 3) Прочие незначительные правки.

--- a/File Hashing.csproj
+++ b/File Hashing.csproj
@@ -117,8 +117,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="texts\" />
+    <Content Include="texts\hash.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="texts\source.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
